parser/SASParser.py
# Generated from SAS.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SASParser ( Parser ):

    grammarFileName = "SAS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'*'", "':'", "'-'", "'('", "')'", 
                     "'/'", "'{'", "'}'", "'+'", "'#'", "'?'", "'??'", "'&'", 
                     "'~'", "'['", "']'", "'**'", "'%'", "'||'", "'!!'", 
                     "'of'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "';;;;'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'$'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'><'", "'<>'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'.'", "'@'", "'='", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ABEND", "END", 
                      "LENGTH", "QKUPCASE", "SYSEVALF", "ABORT", "EVAL", 
                      "LET", "QSCAN", "SYSEXEC", "ACT", "FILE", "LIST", 
                      "QSUBSTR", "SYSFUNC", "ACTIVATE", "GLOBAL", "LISTM", 
                      "QSYSFUNC", "SYSGET", "BQUOTE", "GO", "LOCAL", "QUOTE", 
                      "SYSRPUT", "BY", "GOTO", "MACRO", "QUPCASE", "THEN", 
                      "CLEAR", "IF", "MEND", "RESOLVE", "TO", "CLOSE", "INC", 
                      "PAUSE", "RETURN", "TSO", "CMS", "INCLUDE", "NRSTR", 
                      "RUN", "UNQUOTE", "COMANDR", "INDEX", "ON", "SAVE", 
                      "UNSTR", "COPY", "INFILE", "OPEN", "SCAN", "UNTIL", 
                      "DEACT", "INPUT", "PUT", "STOP", "UPCASE", "DEL", 
                      "KCMPRES", "NRBQUOTE", "STR", "WHILE", "DELETE", "KINDEX", 
                      "NRQUOTE", "SYSCALL", "WINDOW", "DISPLAY", "KLEFT", 
                      "METASYM", "SUBSTR", "DMIDSPLY", "KLENGTH", "QKCMPRES", 
                      "SUPERQ", "DMISPLIT", "KSCAN", "QKLEFT", "SYMDEL", 
                      "DO", "KSUBSTR", "QKSCAN", "SYMEXIST", "EDIT", "KTRIM", 
                      "QKSUBSTR", "SYMGLOBL", "ELSE", "KUPCASE", "QKTRIM", 
                      "SYMLOCAL", "Tk_NULL", "CANCEL", "NOLIST", "ARRAY", 
                      "ARRAY_NUMERIC_ELEMENTS", "ARRAY_CHARACTER_ELEMENTS", 
                      "ARRAY_ALL_ELEMENTS", "GROUPFORMAT", "NOTSORTED", 
                      "DESCENDING", "CALL", "DEBUG", "NESTING", "STACK", 
                      "READ", "PW", "SOURCE", "VIEW", "PGM", "ENCRYPT", 
                      "NOSAVE", "DATALINES", "CARDS", "LINES", "DATALINES4", 
                      "CARDS4", "LINES4", "END_DATALINES4", "ALTER", "DISK", 
                      "DUMMY", "GTERM", "PIPE", "PLOTTER", "PRINTER", "TAPE", 
                      "TEMP", "TERMINAL", "UPRINTER", "DSD", "EXPANDTABS", 
                      "NOEXPANDTABS", "FLOWOVER", "MISSOVER", "PAD", "NOPAD", 
                      "SCANOVER", "SHAREBUFFERS", "STOPOVER", "TRUNCOVER", 
                      "V_INFILE_", "INPUT_ODS", "DATE", "DATETIME", "DDMMYY", 
                      "INFORMAT_COMMA", "INFORMAT_CHAR", "DROP", "PROC", 
                      "ANOVA", "MEANS", "REG", "CORR", "SGPLOT", "PRINT", 
                      "DATA", "Informat", "DOLLAR", "EQ", "NE", "GT", "LT", 
                      "GE", "LE", "IN", "EQC", "NEC", "GTC", "LTC", "GEC", 
                      "LEC", "INColon", "AND", "OR", "NOT", "MIN", "MAX", 
                      "DateLiteral", "TimeLiteral", "DateTimeLiteral", "BitLiteral", 
                      "NameLiteral", "HexLiteral", "STRINGLITERAL", "INT", 
                      "FloatingPointLiteral", "Identifier", "DOT", "AT", 
                      "EQUAL", "COMMA", "LBracket", "RBracket", "WS", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_parse = 0
    RULE_abort_stmt = 1
    RULE_file_spec = 2
    RULE_array_stmt = 3
    RULE_array_name = 4
    RULE_array_subscript = 5
    RULE_array_elements = 6
    RULE_initial_value_list = 7
    RULE_initial_value_list_item = 8
    RULE_initial_value_list_bk = 9
    RULE_constant_iter_value = 10
    RULE_constant_value = 11
    RULE_assign_stmt = 12
    RULE_by_stmt = 13
    RULE_call_stmt = 14
    RULE_data_stmt = 15
    RULE_dataset_name_opt = 16
    RULE_datastmt_cmd = 17
    RULE_view_dsname_opt = 18
    RULE_view_name = 19
    RULE_dataset_name = 20
    RULE_program_name = 21
    RULE_passwd_opt = 22
    RULE_source_opt = 23
    RULE_datalines_stmt = 24
    RULE_datalines4_stmt = 25
    RULE_do_stmt = 26
    RULE_do_by_stmt = 27
    RULE_do_while_stmt = 28
    RULE_do_until_stmt = 29
    RULE_drop_stmt = 30
    RULE_infile_stmt = 31
    RULE_file_specification = 32
    RULE_device_type = 33
    RULE_infile_options = 34
    RULE_input_stmt = 35
    RULE_put_stmt = 36
    RULE_input_specification = 37
    RULE_put_specification = 38
    RULE_pointer_control = 39
    RULE_informat_list = 40
    RULE_input_variable_format = 41
    RULE_input_variable = 42
    RULE_put_variable_format = 43
    RULE_put_variable = 44
    RULE_column_point_control = 45
    RULE_line_point_control = 46
    RULE_format_modifier = 47
    RULE_column_specifications = 48
    RULE_means_proc = 49
    RULE_proc_stmt = 50
    RULE_proc_name = 51
    RULE_run_stmt = 52
    RULE_sas_stmt_list = 53
    RULE_if_stmt = 54
    RULE_if_then_else_stmt = 55
    RULE_delete_stmt = 56
    RULE_expression = 57
    RULE_expressionList = 58
    RULE_of_var_list = 59
    RULE_identifiers_list = 60
    RULE_in_var_list = 61
    RULE_colonInts = 62
    RULE_literal = 63
    RULE_variables = 64

    ruleNames =  [ "parse", "abort_stmt", "file_spec", "array_stmt", "array_name", 
                   "array_subscript", "array_elements", "initial_value_list", 
                   "initial_value_list_item", "initial_value_list_bk", "constant_iter_value", 
                   "constant_value", "assign_stmt", "by_stmt", "call_stmt", 
                   "data_stmt", "dataset_name_opt", "datastmt_cmd", "view_dsname_opt", 
                   "view_name", "dataset_name", "program_name", "passwd_opt", 
                   "source_opt", "datalines_stmt", "datalines4_stmt", "do_stmt", 
                   "do_by_stmt", "do_while_stmt", "do_until_stmt", "drop_stmt", 
                   "infile_stmt", "file_specification", "device_type", "infile_options", 
                   "input_stmt", "put_stmt", "input_specification", "put_specification", 
                   "pointer_control", "informat_list", "input_variable_format", 
                   "input_variable", "put_variable_format", "put_variable", 
                   "column_point_control", "line_point_control", "format_modifier", 
                   "column_specifications", "means_proc", "proc_stmt", "proc_name", 
                   "run_stmt", "sas_stmt_list", "if_stmt", "if_then_else_stmt", 
                   "delete_stmt", "expression", "expressionList", "of_var_list", 
                   "identifiers_list", "in_var_list", "colonInts", "literal", 
                   "variables" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    ABEND=23
    END=24
    LENGTH=25
    QKUPCASE=26
    SYSEVALF=27
    ABORT=28
    EVAL=29
    LET=30
    QSCAN=31
    SYSEXEC=32
    ACT=33
    FILE=34
    LIST=35
    QSUBSTR=36
    SYSFUNC=37
    ACTIVATE=38
    GLOBAL=39
    LISTM=40
    QSYSFUNC=41
    SYSGET=42
    BQUOTE=43
    GO=44
    LOCAL=45
    QUOTE=46
    SYSRPUT=47
    BY=48
    GOTO=49
    MACRO=50
    QUPCASE=51
    THEN=52
    CLEAR=53
    IF=54
    MEND=55
    RESOLVE=56
    TO=57
    CLOSE=58
    INC=59
    PAUSE=60
    RETURN=61
    TSO=62
    CMS=63
    INCLUDE=64
    NRSTR=65
    RUN=66
    UNQUOTE=67
    COMANDR=68
    INDEX=69
    ON=70
    SAVE=71
    UNSTR=72
    COPY=73
    INFILE=74
    OPEN=75
    SCAN=76
    UNTIL=77
    DEACT=78
    INPUT=79
    PUT=80
    STOP=81
    UPCASE=82
    DEL=83
    KCMPRES=84
    NRBQUOTE=85
    STR=86
    WHILE=87
    DELETE=88
    KINDEX=89
    NRQUOTE=90
    SYSCALL=91
    WINDOW=92
    DISPLAY=93
    KLEFT=94
    METASYM=95
    SUBSTR=96
    DMIDSPLY=97
    KLENGTH=98
    QKCMPRES=99
    SUPERQ=100
    DMISPLIT=101
    KSCAN=102
    QKLEFT=103
    SYMDEL=104
    DO=105
    KSUBSTR=106
    QKSCAN=107
    SYMEXIST=108
    EDIT=109
    KTRIM=110
    QKSUBSTR=111
    SYMGLOBL=112
    ELSE=113
    KUPCASE=114
    QKTRIM=115
    SYMLOCAL=116
    Tk_NULL=117
    CANCEL=118
    NOLIST=119
    ARRAY=120
    ARRAY_NUMERIC_ELEMENTS=121
    ARRAY_CHARACTER_ELEMENTS=122
    ARRAY_ALL_ELEMENTS=123
    GROUPFORMAT=124
    NOTSORTED=125
    DESCENDING=126
    CALL=127
    DEBUG=128
    NESTING=129
    STACK=130
    READ=131
    PW=132
    SOURCE=133
    VIEW=134
    PGM=135
    ENCRYPT=136
    NOSAVE=137
    DATALINES=138
    CARDS=139
    LINES=140
    DATALINES4=141
    CARDS4=142
    LINES4=143
    END_DATALINES4=144
    ALTER=145
    DISK=146
    DUMMY=147
    GTERM=148
    PIPE=149
    PLOTTER=150
    PRINTER=151
    TAPE=152
    TEMP=153
    TERMINAL=154
    UPRINTER=155
    DSD=156
    EXPANDTABS=157
    NOEXPANDTABS=158
    FLOWOVER=159
    MISSOVER=160
    PAD=161
    NOPAD=162
    SCANOVER=163
    SHAREBUFFERS=164
    STOPOVER=165
    TRUNCOVER=166
    V_INFILE_=167
    INPUT_ODS=168
    DATE=169
    DATETIME=170
    DDMMYY=171
    INFORMAT_COMMA=172
    INFORMAT_CHAR=173
    DROP=174
    PROC=175
    ANOVA=176
    MEANS=177
    REG=178
    CORR=179
    SGPLOT=180
    PRINT=181
    DATA=182
    Informat=183
    DOLLAR=184
    EQ=185
    NE=186
    GT=187
    LT=188
    GE=189
    LE=190
    IN=191
    EQC=192
    NEC=193
    GTC=194
    LTC=195
    GEC=196
    LEC=197
    INColon=198
    AND=199
    OR=200
    NOT=201
    MIN=202
    MAX=203
    DateLiteral=204
    TimeLiteral=205
    DateTimeLiteral=206
    BitLiteral=207
    NameLiteral=208
    HexLiteral=209
    STRINGLITERAL=210
    INT=211
    FloatingPointLiteral=212
    Identifier=213
    DOT=214
    AT=215
    EQUAL=216
    COMMA=217
    LBracket=218
    RBracket=219
    WS=220
    COMMENT=221
    LINE_COMMENT=222

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SASParser.EOF, 0)

        def sas_stmt_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SASParser.Sas_stmt_listContext)
            else:
                return self.getTypedRuleContext(SASParser.Sas_stmt_listContext,i)


        def getRuleIndex(self):
            return SASParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = SASParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 28)) & ~0x3f) == 0 and ((1 << (_la - 28)) & 1159747547738144769) != 0) or ((((_la - 120)) & ~0x3f) == 0 and ((1 << (_la - 120)) & 4665729213962911873) != 0) or _la==213:
                self.state = 130
                self.sas_stmt_list()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.match(SASParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Abort_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABORT(self):
            return self.getToken(SASParser.ABORT, 0)

        def ABEND(self):
            return self.getToken(SASParser.ABEND, 0)

        def CANCEL(self):
            return self.getToken(SASParser.CANCEL, 0)

        def RETURN(self):
            return self.getToken(SASParser.RETURN, 0)

        def INT(self):
            return self.getToken(SASParser.INT, 0)

        def NOLIST(self):
            return self.getToken(SASParser.NOLIST, 0)

        def file_spec(self):
            return self.getTypedRuleContext(SASParser.File_specContext,0)


        def getRuleIndex(self):
            return SASParser.RULE_abort_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAbort_stmt" ):
                listener.enterAbort_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAbort_stmt" ):
                listener.exitAbort_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAbort_stmt" ):
                return visitor.visitAbort_stmt(self)
            else:
                return visitor.visitChildren(self)




    def abort_stmt(self):

        localctx = SASParser.Abort_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_abort_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(SASParser.ABORT)
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.state = 139
                self.match(SASParser.ABEND)
                pass
            elif token in [118]:
                self.state = 140
                self.match(SASParser.CANCEL)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==210:
                    self.state = 141
                    self.file_spec()


                pass
            elif token in [61]:
                self.state = 144
                self.match(SASParser.RETURN)
                pass
            elif token in [1, 119, 211]:
                pass
            else:
                pass
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==211:
                self.state = 147
                self.match(SASParser.INT)


            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==119:
                self.state = 150
                self.match(SASParser.NOLIST)


            self.state = 153
            self.match(SASParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class File_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRINGLITERAL(self):
            return self.getToken(SASParser.STRINGLITERAL, 0)

        def getRuleIndex(self):
            return SASParser.RULE_file_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_spec" ):
                listener.enterFile_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_spec" ):
                listener.exitFile_spec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_spec" ):
                return visitor.visitFile_spec(self)
            else:
                return visitor.visitChildren(self)




    def file_spec(self):

        localctx = SASParser.File_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_file_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(SASParser.STRINGLITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(SASParser.ARRAY, 0)

        def array_name(self):
            return self.getTypedRuleContext(SASParser.Array_nameContext,0)


        def LBracket(self):
            return self.getToken(SASParser.LBracket, 0)

        def array_subscript(self):
            return self.getTypedRuleContext(SASParser.Array_subscriptContext,0)


        def RBracket(self):
            return self.getToken(SASParser.RBracket, 0)

        def DOLLAR(self):
            return self.getToken(SASParser.DOLLAR, 0)

        def INT(self):
            return self.getToken(SASParser.INT, 0)

        def array_elements(self):
            return self.getTypedRuleContext(SASParser.Array_elementsContext,0)


        def initial_value_list(self):
            return self.getTypedRuleContext(SASParser.Initial_value_listContext,0)


        def getRuleIndex(self):
            return SASParser.RULE_array_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_stmt" ):
                listener.enterArray_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_stmt" ):
                listener.exitArray_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_stmt" ):
                return visitor.visitArray_stmt(self)
            else:
                return visitor.visitChildren(self)




    def array_stmt(self):

        localctx = SASParser.Array_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(SASParser.ARRAY)
            self.state = 158
            self.array_name()
            self.state = 159
            self.match(SASParser.LBracket)
            self.state = 160
            self.array_subscript()
            self.state = 161
            self.match(SASParser.RBracket)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==184:
                self.state = 162
                self.match(SASParser.DOLLAR)


            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==211:
                self.state = 165
                self.match(SASParser.INT)


            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 121)) & ~0x3f) == 0 and ((1 << (_la - 121)) & 7) != 0) or _la==213:
                self.state = 168
                self.array_elements()


            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 171
                self.initial_value_list()


            self.state = 174
            self.match(SASParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(SASParser.Identifier, 0)

        def getRuleIndex(self):
            return SASParser.RULE_array_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_name" ):
                listener.enterArray_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_name" ):
                listener.exitArray_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_name" ):
                return visitor.visitArray_name(self)
            else:
                return visitor.visitChildren(self)




    def array_name(self):
